// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has correct starting state 1`] = `
Object {
  "cards": Array [],
  "filters": Object {
    "orderBy": "name",
    "page": 1,
    "pageSize": 20,
    "types": "creature",
  },
  "isLoadingMore": false,
  "isPageLoading": true,
  "totalCount": 0,
  "userCards": Object {
    "byId": Object {},
  },
}
`;

exports[`matches snapshot for initialFilters 1`] = `
Object {
  "orderBy": "name",
  "page": 1,
  "pageSize": 20,
  "types": "creature",
}
`;
